--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.3.2
   table_calendar: ^3.2.0
   intl: ^0.20.2
   shared_preferences: ^2.2.3
@@ -32,7 +33,8 @@ dependencies:
   flutter_svg: ^2.2.1
   cached_network_image: ^3.4.1
   dio: ^5.9.0
-  firebase_auth: ^6.1.0
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
   google_sign_in: ^7.2.0
   flutter_secure_storage: ^9.2.4
   image_picker: ^1.2.0
